Sugati/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Sales_CommissionP__c</fullName>
        <label>Sales Commission %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Commission__c</fullName>
        <label>Sales Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>U_Field_1__c</fullName>
        <label>Field 1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>U_Field_2__c</fullName>
        <label>Field 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>U_Field_3__c</fullName>
        <label>Field 3</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>U_Field_Title_1__c</fullName>
        <label>Field Title 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>U_Field_Title_2__c</fullName>
        <label>Field Title 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>U_Field_Title_3__c</fullName>
        <label>Field Title 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>U_Image__c</fullName>
        <label>User Image</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>U_Our_Expertise__c</fullName>
        <inlineHelpText>For Itinerary</inlineHelpText>
        <label>Our Expertise</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>U_User_Signature__c</fullName>
        <label>User Signature</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>U_Why_Us__c</fullName>
        <label>Why Us</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>